--- a/m-tourisme/src/AdminBundle/Resources/views/actu/show.html.twig
+++ b/m-tourisme/src/AdminBundle/Resources/views/actu/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{% extends 'layoutAdmin.html.twig' %}
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('css/styleShow.css')}}">
 {% endblock %}
