--- a/m-tourisme/app/Resources/views/actu/show.html.twig
+++ b/m-tourisme/app/Resources/views/actu/show.html.twig
@@ -25,19 +25,19 @@
             <tbody>
                 <tr>
                     <th>Actu N°</th>
-                    <td>{{ actu.id }}</td>
+                    <td class="id">{{ actu.id }}</td>
                 </tr>
                 <tr>
                     <th>Titre</th>
-                    <td>{{ actu.titre }}</td>
+                    <td class="titre">{{ actu.titre }}</td>
                 </tr>
                 <tr>
                     <th>Contenu</th>
-                    <td>{{ actu.contenu }}</td>
+                    <td class="contenu">{{ actu.contenu }}</td>
                 </tr>
                 <tr>
                     <th>Date</th>
-                    <td>{% if actu.date %}{{ actu.date|date('Y-m-d') }}{% endif %}</td>
+                    <td class="date">{% if actu.date %}{{ actu.date|date('Y-m-d') }}{% endif %}</td>
                 </tr>
                 <tr>
                     <th>Image</th>
@@ -46,19 +46,23 @@
             </tbody>
         </table>
 
-        <ul>
-            <li>
-                <a href="{{ path('actu_index') }}"><input type="submit" value="Retour à la liste"></a>
-            </li>
-            <li>
-                <a href="{{ path('actu_edit', { 'id': actu.id }) }}"><input type="submit" value="Editer"></a>
-            </li>
-            <li>
-                {{ form_start(delete_form) }}
-                    <input type="submit" value="Suprimer">
-                {{ form_end(delete_form) }}
-            </li>
-        </ul>
+        <div class="container-fluid">
+            <div class="row bouton">
+                <div class="col-xs-4">
+                        <a href="{{ path('actu_index') }}"><input type="submit" class="btn btn-primary btn-lg"
+                                                                  value="Retour à la liste"></a>
+                </div>
+                <div class="col-xs-4">
+                        <a href="{{ path('actu_edit', { 'id': actu.id }) }}"><input type="submit" class="btn
+                        btn-success btn-lg"
+                                                                                    value="Editer"></a>
+                </div>
+                <div class="col-xs-4">
+                            <input type="submit" class="btn btn-danger btn-lg" value="Suprimer">
+                </div>
+            </div>
+        </div>
+        <br/>
     {% endblock %}
     {% block footer %}
         {{ include('footerAdmin.html.twig') }}
