--- a/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
@@ -2,17 +2,17 @@
 <div class="container-fluid">
     <div class="hidden-xs sectionImage">
         <div class="row">
-            <div class="col-xs-offset-2 col-xs-4">
+            <div class="col-xs-offset-1 col-xs-4">
                 <br/><br/>
                 <img class="guillemets" src="{{ asset ('image/guillemets up.png')}}" alt="image guillemets">
             </div>
-            <div class="col-xs-5">
+            <div class="col-xs-offset-1 col-xs-5">
                 <img class="iphone hidden-xs img-responsive" src="{{ asset ('image/iPhone-footer.png')}}" alt="iphone geomotifs">
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <p class="textImage">Redécouvrez ce que vous voyez tous les jours</p>
+                <p class="textImage">Prenez le temps de lever la tête</p>
             </div>
         </div>
         <br/><br/><br/><br/><br/><br/>
