--- a/m-tourisme/web/css/styleShow.css
+++ b/m-tourisme/web/css/styleShow.css
@@ -1,10 +1,13 @@
 h1 {
     text-align: center;
+    font-family: 'santorregular', 'DIN-Bold', 'Courgette';
+    font-size: 3.5em;
+    padding-left: 100px;
 }
 
 table {
     border-collapse: separate;
-    border-spacing: 20px 24px; /* Nombre de pixels d'espace horizontal (5px), vertical (8px) */
+    border-spacing: 20px 40px; /* Nombre de pixels d'espace horizontal (5px), vertical (8px) */
 }
 
 td {
@@ -15,13 +18,33 @@ td {
 th {
     text-align: center;
     font-family: 'DIN-Bold', 'Courgette';
-    font-size: 120%;
+    font-size: 150%;
 }
 
 .contenu {
     text-align: left;
+    font-size: 1.5em;
 }
 
 ul {
     list-style-type: none;
+}
+
+.bouton {
+    text-align: center;
+}
+
+.id {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.titre {
+    font-size: 1.8em;
+    font-weight: bold;
+}
+
+.date {
+    font-size: 1.5em;
+    font-weight: bold;
 }
