--- a/m-tourisme/web/css/stylesheetActu.css
+++ b/m-tourisme/web/css/stylesheetActu.css
@@ -18,11 +18,11 @@
 }
 
 .lens:hover .lens-actu {
-    animation: focus 3s ease-in-out 0s ;
+    animation: focus 1s ease-in-out 0s ;
 }
 
 .lens:hover .imgInLens {
-    animation: focus-blur 3s ease-in-out 0s ;
+    animation: focus-blur 1s ease-in-out 0s ;
 }
 
 .lens-actu {
@@ -45,10 +45,15 @@
 .txtActu {
     margin-top: 5%;
     margin-bottom: 5%;
+    font-size: 90%;
 }
 
 h1 {
-    margin-top: 0px;
+    text-align: center;
+    margin-bottom: 5%;
+    color: #EE6616;
+    font-family: 'DIN';
+    font-size: 400%;
 }
 
 .slide {
