--- a/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
@@ -24,7 +24,7 @@
         <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
 
 
-            <form method="post" class="form" action="formPost">
+            <form method="POST" class="form" action="email.html.twig">
                 <div class="form-group">
                     <input type="Nom" class="form-control input-lg" id="Nom" placeholder="Nom *" aria-label="Votre nom"
                            required><br/>
@@ -45,7 +45,7 @@
                     message" rows="10" required></textarea><br/>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-warning catForm">Envoyer</button>
+                    <button type="submit" class="btn btn-warning catForm" class="lien_submit">Envoyer</button>
                 </div>
             </form>
 
