--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -1,33 +1,35 @@
-<h1 id="ancreActu">Actualités</h1>
+<h1 id="ancreActu" class="titreActu">Actualités</h1>
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         {% for actu in actus %}
-            {% if (loop.index -1) is divisible by(3) %}
+            {% if (loop.index0) is divisible by(3) %}
                 <div class="item
                 {% if loop.index ==1 %}
                     active
                 {% endif %}
                    ">
                 <div class="row">
-            {% endif %}
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <h2> {{ actu.titre }}</h2>
-                    <div class="lens">
-                        <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive imgInLens" alt="Image d'actu">
-                        <img src="{{ asset('image/lens_reflect.png')}}"  class="img-responsive lens-actu" alt="lentille">
+                {% endif %}
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <h2 class="news">{{ actu.titre }}</h2>
+                        <div class="lens">
+                            <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive imgInLens img-circle" alt="Image d'actu">
+                            <img src="{{ asset('image/lens_reflect.png')}}"  class="img-responsive lens-actu" alt="lentille">
+                        </div>
+                        <p class="txtActu">{{ actu.contenu[:150] }}</p>
+                        <p><a class="orange" href="{{ path('afficher_actu', {'id': actu.id}) }}">En lire plus...</a></p>
+                        <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
                     </div>
-                    <p class="txtActu">{{ actu.contenu[:150] }}</p>
-                    <p><a class="orange" href="{{ path('afficher_actu', {'id': actu.id}) }}">En lire plus...</a></p>
-                    <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
-                </div>
             {% if (loop.index -3) is divisible by(3) %}
                 </div></div>
             {% endif %}
@@ -39,7 +41,6 @@
         {% if (actus|length -3) is not divisible by (3) %}
             </div></div>
          {% endif %}
-
     </div>
 
 
