--- a/m-tourisme/web/css/stylesheetActu.css
+++ b/m-tourisme/web/css/stylesheetActu.css
@@ -27,28 +27,20 @@
 
 .lens-actu {
     position: absolute;
-    top: 10%;
+    top: 25%;
     margin-left: 25%;
     width: 40%;
-    margin-top: 5%;
     z-index: 1;
 }
 
 .imgInLens {
     position: relative;
-    width: 40%;
-    height: 40%;
+    width: 20%;
     margin-top: 5%;
     margin-left: 25%;
 }
 
-.txtActu {
-    margin-top: 5%;
-    margin-bottom: 5%;
-    font-size: 90%;
-}
-
-h1 {
+.titreActu {
     text-align: center;
     margin-bottom: 5%;
     color: #EE6616;
@@ -56,15 +48,28 @@ h1 {
     font-size: 400%;
 }
 
-.slide {
-    padding: none;
+.txtActu {
+    text-align: center;
+    font-size: 90%;
+}
+
+.news{
+    font-size: 300%;
+    text-align: center;
+    color: #EE6616;
 }
 
 .glyphicon {
     color: #EE6616;
 }
 
-.orange {
+.orange, .date{
+    color: #EE6616;
+    text-align: center;
+    margin-left: 35%;
+}
+
+.orange:hover{
     color: #EE6616;
 }
 
