--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -1,56 +1,84 @@
-<h1 id="ancreActu" class="titreActu">Actualités</h1>
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        {% for actu in actus %}
-            {% if (loop.index0) is divisible by(3) %}
-                <div class="item
-                {% if loop.index ==1 %}
-                    active
-                {% endif %}
-                   ">
-                <div class="row">
-                {% endif %}
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                        <h2 class="news">{{ actu.titre }}</h2>
-                        <div class="lens">
-                            <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive imgInLens img-circle" alt="Image d'actu">
-                            <img src="{{ asset('image/lens_reflect.png')}}"  class="img-responsive lens-actu" alt="lentille">
-                        </div>
-                        <p class="txtActu">{{ actu.contenu[:150] }}</p>
-                        <p><a class="orange" href="{{ path('afficher_actu', {'id': actu.id}) }}">En lire plus...</a></p>
-                        <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
-                    </div>
-            {% if (loop.index -3) is divisible by(3) %}
-                </div></div>
-            {% endif %}
-
-        {% else %}
-            <div>Pas d'actualités</div>
-        {% endfor %}
-
-        {% if (actus|length -3) is not divisible by (3) %}
-            </div></div>
-         {% endif %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 id="ancreActu" class="titreActu">Actualités</h1>
+        </div>
     </div>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
 
+        </ol>
 
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            {% for actu in actus %}
+                {% if (loop.index0) is divisible by(3) %}
+                    <div class="item
+                    {% if loop.index ==1 %}
+                        active
+                    {% endif %}
+                       ">
+                    <div class="row">
+                    {% endif %}
+                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h2 class="news">{{ actu.titre }}</h2>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12 lens">
+                                    <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive imgInLens img-circle" alt="Image d'actu">
+                                    <img src="{{ asset('image/lens_reflect.png')}}"  class="img-responsive lens-actu" alt="lentille">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <p class="txtActu">{{ actu.contenu|truncate(100, true,'...') }}</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <p><a class="orange" href="{{ path('afficher_actu', {'id': actu.id}) }}">En lire plus...</a></p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <p class="date">{{ actu.date | date("d-m-Y") }}</p><br/>
+                                </div>
+                            </div>
+                        </div>
+                {% if (loop.index -3) is divisible by(3) %}
+                    </div></div>
+                {% endif %}
+
+            {% else %}
+                <div>Pas d'actualités</div>
+            {% endfor %}
+
+            {% if (actus|length -3) is not divisible by (3) %}
+                </div></div>
+             {% endif %}
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <a class="goToList" href="listeactu">Voir toutes nos actualités</a>
+        </div>
+    </div>
 </div>
