--- a/m-tourisme/web/css/stylesheetActu.css
+++ b/m-tourisme/web/css/stylesheetActu.css
@@ -1,8 +1,3 @@
-.actu {
-    font-family: 'DIN';
-    text-align: center;
-}
-
 @keyframes focus {
     0%   {transform: rotate(0deg);}
     25%  {transform: rotate(25deg);}
@@ -27,7 +22,7 @@
 
 .lens-actu {
     position: absolute;
-    top: 25%;
+    top: 15%;
     margin-left: 25%;
     width: 40%;
     z-index: 1;
@@ -35,6 +30,7 @@
 
 .imgInLens {
     position: relative;
+    width: 45%;
     margin-top: 5%;
     margin-left: 25%;
 }
@@ -47,29 +43,36 @@
     font-size: 400%;
 }
 
-.txtActu {
-    text-align: center;
-    font-size: 90%;
-}
-
 .news{
     font-size: 300%;
     text-align: center;
     color: #EE6616;
 }
 
+.txtActu {
+    margin-top: 20%;
+    text-align: center;
+    font-size: 150%;
+}
+
 .glyphicon {
     color: #EE6616;
 }
 
-.orange, .date{
+.orange {
     color: #EE6616;
     text-align: center;
     margin-left: 35%;
 }
 
-.orange:hover{
+.orange:hover {
     color: #EE6616;
+}
+
+.date {
+    color: #EE6616;
+    text-align: right;
+    margin-left: 35%;
 }
 
 .carousel-caption {
@@ -77,5 +80,10 @@
 }
 
 .goToList {
-    text-align: right;
+    color: #EE6616;
+    font-size: 100%;
+}
+
+.goToList:hover {
+    color: #EE6616;
 }
