--- a/m-tourisme/app/Resources/views/actu/edit.html.twig
+++ b/m-tourisme/app/Resources/views/actu/edit.html.twig
@@ -14,13 +14,17 @@
     {% block header %}
         {{  include('headerAdmin.html.twig') }}
     {% endblock %}
-            <div class="form">
-                <h1>Editer une Actualité</h1>
+            <div class="container">
+                <div class="form row">
+                    <h1>Editer une Actualité</h1>
 
-                {{ form_start(edit_form) }}
-               {{ form_widget(edit_form) }}
-               {{ form_end(edit_form) }}
+                        {{ form_start(edit_form) }}
+                            {{ form_row(edit_form.titre, { 'attr': {'class': 'form-control input-lg'}}) }}<br/>
+                            {{ form_row(edit_form.contenu, { 'attr': {'class': 'form-control', 'rows': '15'}}) }}<br/>
+                            {{ form_row(edit_form.date) }}<br/>
+                            {{ form_row(edit_form.image) }}<br/>
 
+                </div>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-xs-4">
@@ -36,11 +40,9 @@
                         </div>
                             {{ form_start(delete_form) }}
                             {{ form_end(delete_form) }}
-
                     </div>
                 </div>
                 <br/>
-
             </div>
     {% block footer %}
         {{ include('footerAdmin.html.twig') }}
