--- a/m-tourisme/app/Resources/views/actu/index.html.twig
+++ b/m-tourisme/app/Resources/views/actu/index.html.twig
@@ -36,8 +36,8 @@
             <tr>
                 <td><a href="{{ path('actu_show', { 'id': actu.id }) }}">{{ actu.id }}</a></td>
                 <td>{{ actu.titre }}</td>
-                <td class="contenu">{{ actu.contenu[:250]}}</td>
-                <td>{% if actu.date %}{{ actu.date|date('Y-m-d') }}{% endif %}</td>
+                <td class="contenu">{{ actu.contenu | truncate(250, true, ' ...')}}</td>
+                <td>{% if actu.date %}{{ actu.date|date('d-m-Y') }}{% endif %}</td>
                 <td><img class="img" src="{{ asset('upload/' ~ actu.image) }}"</td>
                 <td>
                     <ul>
