--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -15,8 +15,8 @@
     {% block header %}
         {{  include('headerAdmin.html.twig') }}
     {% endblock %}
-    <div class="container">
-        <div class="row new">
+    <div class="container new">
+        <div class="row">
 
                 <h1>Création d'une actualité</h1>
 
