--- a/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
@@ -4,12 +4,13 @@
         {{ parent() }}
         <!-- CSS Perso -->
         <link rel="stylesheet" type="text/css" href="{{ asset('css/stylesheetHeader.css')}}">
-        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetForm.css')}}">
-        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetActu.css')}}">
+        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheet_notre_philosophie.css')}}">
+        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetSectionImage1.css')}}">
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetProduits.css')}}">
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetSectionImage.css')}}">
+        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetActu.css')}}">
+        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetForm.css')}}">
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheetFooter.css')}}">
-        <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheet_notre_philosophie.css')}}">
         <link rel="stylesheet" type="text/css" href="{{  asset('css/stylesheet_social_network.css')}}">
     {% endblock %}
 
@@ -24,7 +25,7 @@
         {{ include('MTLBundle:Default:notre_philosophie.html.twig') }}
     {% endblock %}
     {% block trois_points %}
-        {{ include('MTLBundle:Default:trois_points.html.twig') }}
+        {{ include('MTLBundle:Default:sectionImage1.html.twig') }}
     {% endblock %}
     {% block produits %}
         {{ include('MTLBundle:Default:produits.html.twig') }}
