--- a/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
@@ -2,29 +2,139 @@
         <!----- titre + text ----->
         <div class="row">
             <h1 class="titreMetier">Notre métier</h1>
-            <p class="txt-presentation">Créée fin 2013, m-Tourisme Ludique est une société d’édition d’applications mobiles, installée dans le Loiret.</p>
+            <p class="txt-presentation">
+                Créée fin 2013, m-Tourisme Ludique édite des solutions numériques dédiées à la valorisation ludique et pédagogique de patrimoine matériels et immatériels.
+            </p>
         </div>
 
-        <!--- liste sans puces : sous-titre --->
-        <div class="row">
-            <ul class="col-xs-5 liste_philoA">
-                <li>
-                    <strong>Notre vocation :</strong>
-                </li>
-                <li>
-                    <strong>Nos atouts :</strong>
-                </li>
-                <li>
-                    <strong>Nos valeurs :</strong>
-                </li>
-            </ul>
+        <!----- Partie 2 : bandeau 3 pts ----->
+        <div class="row ">
+            <!----- Classe pour background-image ----->
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-            <!--- liste sans puces : paragraphes --->
+                <!----- point 1 ----->
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                    <!-- Titre -->
+                    <div class="col-xs-6
+                        col-sm-6
+                        col-md-7
+                        col-md-offset-5
+                        col-lg-7
+                        col-lg-offset-5 titre_trois_points">
+                        <h2 class="titrePoint">Etablir un lien</h2>
+                    </div>
 
-            <ul class="col-xs-7 liste_philoB">
-                <li>Valoriser votre patrimoine matériels ou immatériels.</li>
-                <li>Proposer des outils originaux, ludiques et pédagogiques.</li>
-                <li>Plaisir, curiosité, qualité, partage.</li>
-            </ul>
+                    <!-- image -->
+                    <div class="col-xs-6
+                        col-sm-6
+                        col-md-7
+                        col-md-offset-5
+                        col-lg-7
+                        col-lg-offset-5">
+                        <img class="img-responsive img_trois_points" src="{{ asset ('image/icone_link.png')}}" alt=""
+                             width="180px"
+                             height="230px">
+                    </div>
+
+                    <!-- Texte -->
+                    <div class="hidden-xs
+                        hidden-sm
+                        col-md-7
+                        col-md-offset-5
+                        col-lg-7
+                        col-lg-offset-5 text_trois_points">
+                        <p class="txtPoint">
+                            par l'expérience proposée et le choix de technologies adaptées, nous sollicitons la
+                            curiosité des publics visés.
+                        </p>
+                    </div>
+                </div>
+
+                <!----- point 2 ----->
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+
+                    <!--- titre -->
+                    <div class="col-xs-6
+                        col-xs-push-6
+                        col-xs-offset-0
+                        col-sm-6
+                        col-sm-push-6
+                        col-sm-offset-0
+                        col-md-7
+                        col-md-offset-3
+                        col-md-push-0
+                        col-lg-7
+                        col-lg-offset-3
+                        col-lg-push-0 titre_trois_points">
+                        <h2 class="titrePoint">Donner du sens</h2>
+                        <div class="hidden-xs hidden-sm col-md-2 col-lg-2"></div>
+                    </div>
+
+                    <!--- image --->
+                    <div class="col-xs-6
+                        col-xs-pull-6
+                        col-xs-offset-0
+                        col-sm-6
+                        col-sm-pull-6
+                        col-sm-offset-0
+                        col-md-7
+                        col-md-offset-3
+                        col-md-pull-0
+                        col-lg-7
+                        col-lg-offset-3
+                        col-lg-pull-0">
+                        <img class="img-responsive img_trois_points" src="{{ asset ('image/atome_orange_degrade2.png')}}" alt=""
+                             width="180px" height="230px">
+                        <div class="hidden-xs hidden-sm col-md-2 col-lg-2"></div>
+                    </div> <!--- espace --->
+
+                    <!--- texte --->
+                    <div class="hidden-xs
+                        hidden-sm
+                        col-md-7
+                        col-md-offset-3
+                        col-lg-7
+                        col-lg-offset-3 text_trois_points">
+                        <p class="txtPoint">
+                            Par une stratégie de médiation pertinente  et l'apport d'experts des patrimoines concernés,
+                            nous favorisons l'assimilation "sans douleur" des conventions régissant les thèmes choisis.
+                        </p>
+                        <div class="hidden-xs hidden-sm col-md-2 col-lg-2"></div>
+                    </div>
+                </div>
+
+
+                <!----- point 3 ----->
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                    <div class="col-xs-6
+                        col-sm-6
+                        col-md-7
+                        col-lg-7 titre_trois_points">
+                        <h2 class="titrePoint">Susciter l'intérêt</h2>
+                    </div>
+                    <div class="col-xs-6
+                        col-sm-6
+                        col-md-7
+                        col-lg-7">
+                        <img class="img-responsive img_trois_points" src="{{ asset ('image/icone_photo.png')}}"
+                             alt="" width="180px" height="230px">
+                    </div>
+                    <div class="hidden-xs
+                        hidden-sm
+                        col-md-7
+                        col-lg-7 text_trois_points">
+                        <p class="txtPoint">
+                            Ainsi initiés, notre volonté est de donner aux utilisateurs de nos produits
+                            l'envie d'en savoir plus !
+                        </p>
+                    </div>
+                    <!--- <div class="hidden-xs
+                                hidden-sm
+                                col-md-5
+                                col-lg-5"</div> --->
+                </div>
+
+            </div>
+
         </div>
     </div>
