form ok, missing design & sending mail

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/emailPost.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/emailPost.html.twig
@@ -1,1 +1,7 @@
-message
+
+{% block mail %}
+    {{ Nom }} {{ Prenom }} vous a envoyé un message.
+    Adresse eMail :  {{ Email }}
+    Raison sociale : {{ Entreprise }}
+    Contenu : {{ Message }}
+{% endblock %}
