--- a/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
@@ -1,32 +1,33 @@
 {% block contact %}
 
-    <form method="POST" class="form" action="{{ path('email_Post') }}">
-        <div class="form-group">
-            <input type="Nom" class="form-control input-lg" id="Nom" placeholder="Nom *" aria-label="Votre nom"
-                   required><br/>
+    {{ form_start(form) }}
+        <div class="col">
+        {{ form_errors(form.nom) }}
+        {{ form_label(form.nom) }}
+        {{ form_widget(form.nom) }}
         </div>
-        <div class="form-group">
-            <input type="Prenom" class="form-control input-lg" id="Prenom" placeholder="Prénom"
-                   aria-label="Votre prénom" required><br/>
-        </div>
-        <div class="form-group">
-            <input type="Entreprise" class="form-control input-lg" id="Entreprise" placeholder="Entreprise, Société, Organisme..." aria-label="Votre entreprise, société, organisme"><br/>
-        </div>
-        <div class="form-group">
-            <input type="email" class="form-control input-lg" id="Email" placeholder="Email*"
-                   aria-label="Votre email" required><br/>
-        </div>
-        <div class="form-group">
-                    <textarea name="Message" class="form-control input-lg" placeholder="Message*" aria-label="Votre
-                    message" rows="10" required></textarea><br/>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-warning catForm" class="lien_submit">Envoyer</button>
-        </div>
-    </form>
 
+        {{ form_errors(form.prenom) }}
+        {{ form_label(form.prenom) }}
+        {{ form_widget(form.prenom) }}
+
+        {{ form_errors(form.entreprise) }}
+        {{ form_label(form.entreprise) }}
+        {{ form_widget(form.entreprise) }}
+
+        {{ form_errors(form.email) }}
+        {{ form_label(form.email) }}
+        {{ form_widget(form.email) }}
+
+        {{ form_errors(form.message) }}
+        {{ form_label(form.message) }}
+        {{ form_widget(form.message) }}
+    
+        <input type="submit" name="validation" value="ENVOYER"/>
+    {{ form_end(form) }}
 
 {% endblock %}
+
 
 
 
