--- a/m-tourisme/app/Resources/views/actu/show.html.twig
+++ b/m-tourisme/app/Resources/views/actu/show.html.twig
@@ -49,8 +49,7 @@
         <div class="container-fluid">
             <div class="row bouton">
                 <div class="col-xs-4">
-                        <a href="{{ path('actu_index') }}"><input type="submit" class="btn btn-primary btn-lg"
-                                                                  value="Retour à la liste"></a>
+                    <a  class="btn btn-primary btn-lg" href="{{ path('actu_index') }}">Revenir à la liste</a>
                 </div>
                 <div class="col-xs-4">
                         <a href="{{ path('actu_edit', { 'id': actu.id }) }}"><input type="submit" class="btn
