--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -32,8 +32,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-xs-6">
-                            <a href="{{ path('actu_index') }}"><input type="submit" class="btn btn-primary btn-lg"
-                                                                      value="Revenir à la liste"/></a>
+                            <a  class="btn btn-primary btn-lg" href="{{ path('actu_index') }}">Revenir à la liste</a>
                         </div>
                         <div class="col-xs-6">
                             {{ form_start(form) }}
