--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -4,99 +4,62 @@
             <h1 class="titreGeo">GéoMOTifs</h1>
         </div>
     </div>
-
 </div>
-<div class="row">
-    <div class="col-lg-1 col-md-1 col-sm-1 hidden-xs titreNosProduits">
-        <h1>Produits</h1>
-    </div>
-    <div class="col-lg-5 col-md-4">
-        <video class="vid" playsinline autoplay muted loop>
-            <source src="{{ asset('videos/orleanshg.mp4') }}" type="video/mp4">
-        </video>
-    </div>
-    <div class="col-lg-6 col-md-5">
-        <p class="txtGeo">
-            Quae et ut iusto qui. Unde et quia reiciendis iste dolore est enim odio. Ullam nihil molestiae mollitia
-            architecto ea. Accusantium est quis est nesciunt eaque. Culpa aut ratione sit.<br/>
-            Officia expedita eligendi doloribus quia officiis. Illo voluptatem optio quidem eligendi.
-            Quis aut quod consequatur autem beatae illo. Iste saepe tempora voluptas minus. Debitis perferendis error
-            ullam adipisci ea distinctio sit.
-        </p>
-        <div class="row">
-            <div class="col-lg-6 col-md-6 itunes">
-                <a href="https://itunes.apple.com/fr/app/geomotifs/id935219020" target="_blank">
-                    <img src="{{ asset('image/logoAppStore.png') }}" class="img-responsive itunes" alt="Telecharger dans l'appstore">
-                </a>
-            </div>
-            <div class="col-lg-6 col-md-6 android">
-                <a href="https://play.google.com/store/apps/details?id=com.mazedia.wezit.geomotifs" target="_blank">
-                    <img src="{{ asset('image/logoGooglePlay.png') }}" class="img-responsive android" alt="Telecharger dans Google Play">
-                </a>
-            </div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-1 col-md-1 col-sm-1 hidden-xs titreNosProduits">
+            <h1>Produits</h1>
+        </div>
+        <div class="col-lg-5 col-md-4">
+            <video class="vid" playsinline autoplay muted loop>
+                <source src="{{ asset('videos/orleanshg.mp4') }}" type="video/mp4">
+            </video>
+        </div>
+        <div class="col-lg-6 col-md-5">
+            <h2 class="titreProduit">Développez un nouveau thème de visite</h2><br/>
+            <p class="txtGeo">
+                Territoire, Ville, monument, lieu de visite...<br/>
+                <span class="geomotifs">GéoMOTifs</span> a vocation à développer un nouvel axe des valorisation du
+                <strong>patrimoine</strong> par les détails (ornementation, architecture...).
+                Ils sont omniprésents, on ne les voit pas, mais sans eux notre <strong>patrimoine</strong> aurait moins
+                de saveurs.
+                <br/>
+                Vous disposez d'un <strong>patrimoine</strong> éligible et souhaitez renouveler l'intérêt pour votre
+                destination ? Attirer de nouveaux publics ?
+                Développer la notoriété grâce à une matière visuelle par essence ?<br/>
+                Adhérez à <span class="geomotifs">GéoMOTifs !</span> l'offre ludique de visite in-situ entièrement
+                dédiée à la valorisation des détails !
+            </p>
         </div>
     </div>
-
+    <hr class="separe">
 </div>
 
-<!-- bannière de motifs -->
-
-<!-- <div class="container-fluid banner_motifs">
+<div class="container-fluid">
     <div class="row">
-        <ul>
-            <li>
-                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-            </li>
-
-            <li>
-                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors"></article>
-            </li>
-
-            <li>
-                <img class="img-responsive col-xs-hidden col-sm-6 col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-            </li>
-
-            <li>
-                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors1"></article>
-            </li>
-
-            <li>
-                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-            </li>
-
-            <li>
-                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors2"></article>
-            </li>
-
-            <li>
-                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-            </li>
-
-            <li>
-                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors"></article>
-            </li>
-
-            <li>
-                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-            </li>
-
-            <li>
-                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors1"></article>
-            </li>
-
-            <li>
-                <img class="img-responsive col-xs-hidden col-sm-hidden col-md-hidden col-lg-1" src="{{ asset('image/motifs/P1030882-2.JPG') }}" alt="">
-            </li>
-
-            <li>
-                <article class="col-xs-hidden col-sm-hidden col-md-hidden col-lg-1 colors2"></article>
-            </li>
-        </ul>
+        <div class="col-lg-12">
+            <h2 class="titreDownload">Téléchargé notre application pour Android ou iOS</h2>
+        </div>
     </div>
-
-</div> -->
-
+    <div class="row">
+        <div class="col-lg-6">
+            <a href="https://play.google.com/store/apps/details?id=com.mazedia.wezit.geomotifs" target="_blank">
+                <img src="{{ asset('image/logoGooglePlay.png') }}" class="img-responsive android" img align="right" alt="Telecharger dans Google Play">
+            </a>
+        </div>
+        <div class="col-lg-6">
+            <a href="https://itunes.apple.com/fr/app/geomotifs/id935219020" target="_blank">
+                <img src="{{ asset('image/logoAppStore.png') }}" class="img-responsive itunes" alt="Telecharger dans l'appstore">
+            </a>
+        </div>
+    </div>
+        <div class="row citation">
+            <div class="col-lg-12">
+                <p class="citationLeft">"GéoMOTifs, une chasse aux décors ludique touristique et culturelle 100% originale"</p>
+                <p class="citationRight">"Le Géocaching des mots et des formes"</p>
+            </div>
+        </div>
+    <hr class="separe">
+    
 </div>
-</div>
-
-
