modification boutons edit et appercu

--- a/m-tourisme/app/Resources/views/actu/index.html.twig
+++ b/m-tourisme/app/Resources/views/actu/index.html.twig
@@ -43,15 +43,12 @@
                     <ul>
                         <li>
 
-                            <a href="{{ path('actu_show', { 'id': actu.id }) }}"><input type="button" class="btn
-                            btn-primary btn-lg"
-                                                                                        value="Aperçu"></a>
+                            <a class="btn btn-primary btn-lg" href="{{ path('actu_show', { 'id': actu.id }) }}">Aperçu</a>
                         </li>
                         <br/>
                         <li>
-                            <a href="{{ path('actu_edit', { 'id': actu.id }) }}"><input type="button"
-                                                                                        class="btn btn-success btn-lg"
-                                                                                        value="Editer"></a>
+                            <a class="btn btn-success btn-lg" href="{{ path('actu_edit', { 'id': actu.id })
+                            }}">Editer</a>
 
                         </li>
                     </ul>
