--- a/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
@@ -1,29 +1,45 @@
 {% block contact %}
 
     {{ form_start(form) }}
-        <div class="col">
+
+        <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
+            <h2 class="accrocheForm">Un projet, une idée, contactez-nous :</h2></br>
+
+            <div class="form-group">
         {{ form_errors(form.nom) }}
-        {{ form_label(form.nom) }}
+        {#{{ form_label(form.nom) }}#}
         {{ form_widget(form.nom) }}
-        </div>
+            </div>
 
+            <div class="form-group">
         {{ form_errors(form.prenom) }}
-        {{ form_label(form.prenom) }}
+        {#{{ form_label(form.prenom) }}#}
         {{ form_widget(form.prenom) }}
+            </div>
 
+            <div class="form-group">
         {{ form_errors(form.entreprise) }}
-        {{ form_label(form.entreprise) }}
+        {#{{ form_label(form.entreprise) }}#}
         {{ form_widget(form.entreprise) }}
+            </div>
 
+            <div class="form-group">
         {{ form_errors(form.email) }}
-        {{ form_label(form.email) }}
+        {#{{ form_label(form.email) }}#}
         {{ form_widget(form.email) }}
+            </div>
 
+            <div class="form-group">
         {{ form_errors(form.message) }}
-        {{ form_label(form.message) }}
+        {#{{ form_label(form.message) }}#}
         {{ form_widget(form.message) }}
+            </div>
 
-        <input type="submit" name="validation" value="ENVOYER"/>
+            <div class="form-group">
+                <button type="submit" name="validation" class="btn btn-warning"><p class="catForm">Envoyer</p></button>
+            </div>
+
+        </div>
     {{ form_end(form) }}
 
 {% endblock %}
