ajout module FB dans géomotif

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -61,5 +61,61 @@
             </div>
         </div>
     <hr class="separe">
-    
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="txtFB">Retrouvez-nous également sur Facebook</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 FacebookGeo">
+            <div class="fb-page" data-href="https://www.facebook.com/geomotifs" data-tabs="timeline,events,messages"
+                 data-width="500" data-height="6    00" data-small-header="false" data-adapt-container-width="true"
+                 data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/geomotifs" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/geomotifs">Géomotifs</a></blockquote></div>
+        </div>
+    </div>
+    <hr class="separe">
+</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-offset-2 col-lg-3">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="remerciement">Inspiré de:</p>
+                </div>
+            </div>    
+            <div class="row">
+                <div class="col-lg-12">
+                    <a href="http://www.eyrolles.com/Loisirs/Livre/vocabulaire-illustre-de-l-ornement-9782212128598">
+                        <img src="{{ asset('image/produit-vocabulaire.jpg') }}" alt="livre vocabulaire illustré de l'Ornement"></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="remerciement">Réalisé par:</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <a href="http://www.museographie.mazedia.fr/">
+                        <img src="{{ asset('image/produit-mazedia-V2.png') }}" alt="Agence Mazedia"></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="remerciement">Avec le soutien de:</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <a href="http://www.regioncentre-valdeloire.fr/accueil.html">
+                        <img src="{{ asset('image/Region-Centre-Val-de-Loire-2015.png') }}" alt="Région centre Val de Loire"></a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-offset-1"></div>
+    </div>
 </div>
