--- a/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage1.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage1.html.twig
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <p class="textImage1">La connaissance est une richesse qu'on peut donner sans s'appauvrir</p>
+                <p class="textImage1">La connaissance est une richesse que l'on peut donner sans s'appauvrir</p>
             </div>
         </div>
         <br/><br/><br/><br/><br/><br/>
