--- a/m-tourisme/web/css/stylesheetProduits.css
+++ b/m-tourisme/web/css/stylesheetProduits.css
@@ -15,13 +15,6 @@
     color: #EE6616;
 }
 
-.itunes {
-
-}
-
-.android {
-
-}
 
 .titreNosProduits {
     font-family: DIN-Bold;
@@ -42,6 +35,7 @@
 .titreProduit {
     font-size: 200%;
     text-align: center;
+    text-decoration: underline;
 }
 
 .citation {
@@ -50,15 +44,17 @@
 }
 
 .citationLeft {
-    margin-top: 2%;
-    margin-left: 5%;
+    margin-top: 5%;
+    margin-left: 15%;
     text-align: left;
+    transform: rotate(-5deg);
 }
 
 .citationRight {
-    margin-top: 2%;
-    margin-right: 5%;
+    margin: 5%;
     text-align: right;
+    transform: rotate(5deg);
+
 }
 
 .separe {
@@ -71,4 +67,19 @@
 .titreDownload {
     font-size: 200%;
     text-align: center;
+}
+
+.txtFB {
+    font-size: 200%;
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.fb-page {
+    margin-left: 32%;
+}
+
+.remerciement {
+    color: #EE6616;
+    padding-top: 5%;
 }
