--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -20,7 +20,7 @@
             <h2 class="titreProduit">Développez un nouveau thème de visite</h2><br/>
             <p class="txtGeo">
                 Territoire, Ville, monument, lieu de visite...<br/>
-                <span class="geomotifs">GéoMOTifs</span> a vocation à développer un nouvel axe des valorisation du
+                <span class="geomotifs">GéoMOTifs</span> a vocation à développer un nouvel axe des valorisations du
                 <strong>patrimoine</strong> par les détails (ornementation, architecture...).
                 Ils sont omniprésents, on ne les voit pas, mais sans eux notre <strong>patrimoine</strong> aurait moins
                 de saveurs.
@@ -39,7 +39,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <h2 class="titreDownload">Téléchargé notre application pour Android ou iOS</h2>
+            <h2 class="titreDownload">Téléchargez notre application pour Android ou iOS</h2>
         </div>
     </div>
     <div class="row">
