--- a/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
@@ -35,8 +35,10 @@
         {{ form_widget(form.message) }}
             </div>
 
+            <p class="texte_require">* Champs obligatoires</p>
+
             <div class="form-group">
-                <button type="submit" name="validation" class="btn btn-warning"><p class="catForm">Envoyer</p></button>
+                <button type="submit" name="validation" class="btn btn-warning catForm">Envoyer</button>
             </div>
 
         </div>
