--- a/m-tourisme/web/css/stylesheetFooter.css
+++ b/m-tourisme/web/css/stylesheetFooter.css
@@ -27,5 +27,5 @@
     background-image: url(../image/background-orange.JPG);
     background-attachment: fixed;
     background-size: cover;
-    width: 100vw;
+    width: 100%;
 }
