--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -45,7 +45,7 @@
     <div class="row">
         <div class="col-lg-6">
             <a href="https://play.google.com/store/apps/details?id=com.mazedia.wezit.geomotifs" target="_blank">
-                <img src="{{ asset('image/logoGooglePlay.png') }}" class="img-responsive android" img align="right" alt="Telecharger dans Google Play">
+                <img src="{{ asset('image/logoGooglePlay.png') }}" class="img-responsive android" alt="Telecharger dans Google Play">
             </a>
         </div>
         <div class="col-lg-6">
@@ -63,7 +63,17 @@
     <hr class="separe">
     <div class="row">
         <div class="col-lg-12">
-            <p class="txtFB">Retrouvez-nous également sur Facebook</p>
+            <p class="txtFB">Retrouvez-nous sur notre site</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 linkGeo">
+            <a href="http://www.geomotifs.fr/"><img  class="img-responsive" img align="center" src="{{ asset('image/logo-geomotifs.png') }}" alt="site de Géomotifs"></a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="txtFB">Et également sur Facebook</p>
         </div>
     </div>
     <div class="row">
