--- a/m-tourisme/app/Resources/views/base.html.twig
+++ b/m-tourisme/app/Resources/views/base.html.twig
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}m-Tourisme Ludique{% endblock %}</title>
-
+    <meta name="description" content="m-Tourisme Ludique - Création d'usages mobiles ludiques
+appliqués au tourisme et à la culture - Orléans Loiret (45)">
+    <meta name="keywords" content="application, mobile, ludique, tourisme, culture, edition, patrimoine, motif, ornement,
+architecture, geomotifs, details, geocaching">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="1 month">
+    
         <!-- FavIcon -->
-        <link rel="icon" type="image/png" href="{{ asset('image/favicon.png')}}" />
+    <link rel="icon" type="image/png" href="{{ asset('image/favicon.png')}}" />
 
     {% block stylesheets %}
         <!-- Bootstrap -->
